--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ body {
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
+  background-image: url("https://raw.githubusercontent.com/atharva20-coder/3d-periodic-table/main/1.jpg");
+  background-repeat: no-repet;
+  height: 100vh;
+  width: 100vw;
 }
 .periodic {
   position: relative;
