--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
   transform: translateZ(0);
   background-image: url("https://raw.githubusercontent.com/atharva20-coder/3d-periodic-table/main/4.jpg");
   background-repeat: no-repet;
-  height: calc(100vh - 80px);
+  height: 98vh;
 }
 .periodic {
   position: relative;
