--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {
   transform: translateZ(0);
   background-image: url("https://raw.githubusercontent.com/atharva20-coder/3d-periodic-table/main/5.jpg");
   background-repeat: no-repet;
+  height: 100vh;
 }
 .periodic {
   position: relative;
